--- a/src/app/home/make-appointment/make-appointment.component.html
+++ b/src/app/home/make-appointment/make-appointment.component.html
@@ -17,74 +17,93 @@
     </ion-button>
 
     <ion-list>
-      <ion-radio-group [(ngModel)] = "selectedService" (ionChange) = "changeServiceSelected($event.detail.value)">
+
         <ion-list-header>
           <ion-label>Serviciile alese</ion-label>
         </ion-list-header>
-    
-        <ion-item *ngFor = "let service of servicesAvailable">
-          <ion-label>{{service}}</ion-label>
-          <ion-radio slot="start" value="{{service}}"></ion-radio>
-        </ion-item>
 
-        <mat-accordion>
 
-          <mat-expansion-panel *ngFor = "let serviceChoosen of servicesUsed">
-            <mat-expansion-panel-header>
-              <mat-panel-title>
-                {{serviceChoosen.name}}
-              </mat-panel-title>
-              <mat-panel-description>
-                
-              </mat-panel-description>
-            </mat-expansion-panel-header>
-            <p>Stilist selectat: {{serviceChoosen.stylist}}</p>
-            <h5>Optiuni selectate</h5>
-            <p *ngFor = "let option of serviceChoosen.options">{{option}}</p>
-          </mat-expansion-panel>
-        </mat-accordion>
-    
+  <mat-accordion>
 
-      </ion-radio-group>
+  <mat-expansion-panel *ngFor = "let serviceChoosen of servicesUsed">
+
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          {{serviceChoosen.serviceName}}
+        </mat-panel-title>
+
+        <mat-panel-description> </mat-panel-description>
+      </mat-expansion-panel-header>
+      <p>Stilist selectat: {{serviceChoosen.styilistSelected}}</p>
+      <p>Durata: {{serviceChoosen.duration}} min</p>
+      <h5>Optiuni selectate</h5>
+      <p *ngFor = "let option of serviceChoosen.optionsSelected">{{option.optionName}}</p>
+
+      <ion-button size = "small" color="danger" (click) = "deleteService(serviceChoosen)">Şterge</ion-button>
+
+  </mat-expansion-panel>
+
+  </mat-accordion>
+
+
+
     </ion-list>
 
-    <ion-list>
-        <ion-radio-group [(ngModel)] = "selectedStylist" (ionChange) = "changeWorkerSelected($event.detail.value)">
-          <ion-list-header>
-            <ion-label>Stilisti</ion-label>
-          </ion-list-header>
-      
-          <ion-item *ngFor = "let worker of workersAvailable">
-            <ion-label>{{worker}}</ion-label>
-            <ion-radio slot="start" value="{{worker}}"></ion-radio>
-          </ion-item>
-      
-
-        </ion-radio-group>
-    </ion-list>
-
-
-    <mat-form-field class="example-full-width">
-        <input matInput [matDatepicker]="picker" [min]="minDate" [(ngModel)] = "dateSelected" placeholder="Choose a date" (ngModelChange)="onChangeTime()">
+    <mat-form-field class="example-full-width" id = "dateChoose">
+        <input matInput [matDatepicker]="picker" [min]="minDate" [(ngModel)] = "dateSelected" placeholder="Alege o dată" (ngModelChange)="onChangeTime()">
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker touchUi #picker (selectedChanged)="onChangeTime()"></mat-datepicker>
     </mat-form-field>
     
-    <p *ngIf = "!queryData">
+    <p *ngIf = "!queryData && servicesUsed.length">
+      selecteaza o data
       <!-- Inca nu ai selectat nicio dată, incearcă pe <ion-button (click) = "changeDateTo(getFirstDateViaWorker(selectedStylist))">{{getFirstDateViaWorker(selectedStylist)}}</ion-button> -->
     </p>
 
-    <h2 *ngIf = "slotsAvailable">Program valabil</h2>
-    <ion-list>
+    <p *ngIf = "queryData && servicesUsed.length && !slotsAvailable">
+        nu sunt sloturi available
+        <!-- Inca nu ai selectat nicio dată, incearcă pe <ion-button (click) = "changeDateTo(getFirstDateViaWorker(selectedStylist))">{{getFirstDateViaWorker(selectedStylist)}}</ion-button> -->
+    </p>
+
+    <p>
+      Durată totală: {{totalDuration}}
+    </p>
+  
+    <p>
+      Pret total: {{totalMoney}}
+    </p> 
+
+    <h2 *ngIf = "slotsAvailable &&  queryData && justOneStylist">Program valabil</h2>
+    <ion-list *ngIf = "slotsAvailable &&  queryData && justOneStylist">
       <ion-item *ngFor = "let slot of slotsAvailable">
         {{slot}}
         <ion-button slot = "end" (click) = "presentAlertConfirm(slot)">Programeaza-te</ion-button>
       </ion-item>
     </ion-list>
 
+    <div *ngIf = "!justOneStylist && mergedServicesByStylist.length > 1">
+
+      <h3>Program legat</h3>
+      <p *ngFor = "let slots of slotsConsecutive">
+        <span *ngFor = "let slot of slots">
+          {{slot }}
+        </span>
+      </p>
+
+      <h3>Program nelegat</h3>
+      <p *ngFor = "let slots of slotsNotConsecutive">
+        <span *ngFor = "let slot of slots">
+          {{slot }}
+        </span>
+      </p>
+
+    </div>
+
+    
+
   </ion-content> 
 
-  <ion-content *ngIf = "!dataLoaded && !error">
+  <ion-content *ngIf = "!dataLoaded">
     <ion-list *ngIf = "!dataLoaded">
           <ion-item *ngFor = "let x of [1, 2, 3, 4, 5, 6, 7]">
             <ion-avatar slot="start">
@@ -105,20 +124,3 @@
     </ion-list>
   </ion-content>
 
-  <ion-content *ngIf = "error">
-
-    <ion-item>
-        <ion-label>Serviciul ales</ion-label>
-        <ion-input [(ngModel)] = "selectedService" [disabled] = "locked"></ion-input>
-        <ion-icon name="unlock" *ngIf = "locked" slot = "end" (click) = "locked = !locked"></ion-icon>
-        <ion-icon name="lock" *ngIf = "!locked" slot = "end" (click) = "locked = !locked"></ion-icon>
-      </ion-item>
-  
-      <mat-form-field class="example-full-width">
-          <input matInput [matDatepicker]="picker" [min]="minDate" [(ngModel)] = "dateSelected" placeholder="Choose a date" (ngModelChange)="onChangeTime()">
-          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-          <mat-datepicker touchUi #picker (selectedChanged)="onChangeTime()"></mat-datepicker>
-      </mat-form-field>
-
-    <h2>Ceva nu a mers bine</h2>
-  </ion-content>
